Fix - alignwide margin value

--- a/style.css
+++ b/style.css
@@ -2276,14 +2276,6 @@ iframe#wp-custom-header-video {
 /**
 * Media Queries
 * --------------------------------------------------------------------------- */
-
-@media screen and (max-width: 1500px) {
-	.full-width .entry-content > .alignwide {
-		margin-left: -50px;
-		margin-right: -50px;
-	}
-}
-
 @media screen and (max-width: 1078px) {
 
 	.full-width .entry-content > .alignwide {
@@ -2334,6 +2326,12 @@ iframe#wp-custom-header-video {
 	.pull-right.social-icons {
 		float: right !important;
 	}
+
+	.full-width .entry-content > .alignwide {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
 }
 
 @media (max-width: 767px) {
